<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:id="@+id/movie_detail"
        android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
...
